src/test/deca/syntax/valid/sansObjet/Boolean.deca
{
    boolean x = false;
    boolean y = true;
}
