src/test/deca/syntax/invalid/sansObjet/BadPrintln7.deca
{
    int x = 2020;
    println("Hello "x);
}